docs/pages/versions/v55.0.0/sdk/ui/swift-ui/toggle.mdx
---
title: 切换
description: 一个用于显示原生切换控件的 SwiftUI Toggle 组件。
sourceCodeUrl: 'https://github.com/expo/expo/tree/main/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';

Expo UI Toggle 与官方 SwiftUI [Toggle API](https://developer.apple.com/documentation/swiftui/toggle) 保持一致，并支持通过 [`toggleStyle`](modifiers/#togglestylestyle) 修饰符进行样式设置。

## 安装

<APIInstallSection />

## 用法

### 基础开关

```tsx BasicToggleExample.tsx
import { useState } from 'react';
import { Host, Toggle } from '@expo/ui/swift-ui';

export default function BasicToggleExample() {
  const [isOn, setIsOn] = useState(false);

  return (
    <Host matchContents>
      <Toggle isOn={isOn} onIsOnChange={setIsOn} label="启用功能" />
    </Host>
  );
}
```

### 带系统图像的开关

```tsx ToggleWithImageExample.tsx
import { useState } from 'react';
import { Host, Toggle } from '@expo/ui/swift-ui';

export default function ToggleWithImageExample() {
  const [airplaneMode, setAirplaneMode] = useState(false);

  return (
    <Host matchContents>
      <Toggle
        isOn={airplaneMode}
        onIsOnChange={setAirplaneMode}
        label="飞行模式"
        systemImage="airplane"
      />
    </Host>
  );
}
```

### 开关样式

使用 `toggleStyle` 修饰符来更改开关的外观。可用样式有：`automatic`、`switch` 和 `button`。

> **注意：** `button` 样式在 tvOS 上不可用。

```tsx ToggleStylesExample.tsx
import { useState } from 'react';
import { Host, Toggle, VStack } from '@expo/ui/swift-ui';
import { toggleStyle } from '@expo/ui/swift-ui/modifiers';

export default function ToggleStylesExample() {
  const [isOn, setIsOn] = useState(false);

  return (
    <Host matchContents>
      <VStack spacing={8}>
        <Toggle
          isOn={isOn}
          onIsOnChange={setIsOn}
          label="切换样式"
          modifiers={[toggleStyle('switch')]}
        />
        <Toggle
          isOn={isOn}
          onIsOnChange={setIsOn}
          label="按钮样式"
          modifiers={[toggleStyle('button')]}
        />
      </VStack>
    </Host>
  );
}
```

### 带色调的开关

使用 `tint` 修饰符来更改开关的颜色。

```tsx TintedToggleExample.tsx
import { useState } from 'react';
import { Host, Toggle } from '@expo/ui/swift-ui';
import { tint } from '@expo/ui/swift-ui/modifiers';

export default function TintedToggleExample() {
  const [isOn, setIsOn] = useState(true);

  return (
    <Host matchContents>
      <Toggle
        isOn={isOn}
        onIsOnChange={setIsOn}
        label="自定义颜色"
        modifiers={[tint('#FF9500')]}
      />
    </Host>
  );
}
```

### 自定义标签内容

你可以将自定义组件作为 `children` 传入，用于更复杂的开关标签。使用多个 `Text` 视图，其中第一个表示标题，第二个表示副标题。

```tsx CustomLabelExample.tsx
import { useState } from 'react';
import { Host, Toggle, Text } from '@expo/ui/swift-ui';

export default function CustomLabelExample() {
  const [vibrateOnRing, setVibrateOnRing] = useState(false);

  return (
    <Host matchContents>
      <Toggle isOn={vibrateOnRing} onIsOnChange={setVibrateOnRing}>
        <Text>来电时振动</Text>
        <Text>电话响铃时启用振动</Text>
      </Toggle>
    </Host>
  );
}
```

### 隐藏标签

使用 [`labelsHidden`](modifiers/#labelshidden) 修饰符来隐藏标签，同时保留其可访问性。

```tsx HiddenLabelExample.tsx
import { useState } from 'react';
import { Host, Toggle } from '@expo/ui/swift-ui';
import { labelsHidden } from '@expo/ui/swift-ui/modifiers';

export default function HiddenLabelExample() {
  const [isOn, setIsOn] = useState(false);

  return (
    <Host matchContents>
      <Toggle
        isOn={isOn}
        onIsOnChange={setIsOn}
        label="隐藏标签"
        modifiers={[labelsHidden()]}
      />
    </Host>
  );
}
```

## API

```tsx
import { Toggle } from '@expo/ui/swift-ui';
```

<APISection packageName="expo-ui/swift-ui/toggle" apiName="Toggle" />
