docs/pages/versions/v56.0.0/sdk/ui/swift-ui/toggle.mdx
---
title: 切换
description: 一个用于显示原生开关的 SwiftUI Toggle 组件。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

> **info** 关于跨平台使用，请参见通用的 [`Switch`](../universal/switch) —— 它会根据平台渲染相应的原生组件。

Expo UI Toggle 与官方 SwiftUI [Toggle API](https://developer.apple.com/documentation/swiftui/toggle) 保持一致，并支持通过 [`toggleStyle`](modifiers/#togglestylestyle) 修饰符进行样式设置。

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/toggle/ios-light.webp"
  darkSrc="/static/images/expo-ui/toggle/ios-dark.webp"
  alt="表单中的切换行"
/>

## 安装

<APIInstallSection />

## 用法

### 基础切换

```tsx BasicToggleExample.tsx
import { useState } from 'react';
import { Host, Toggle } from '@expo/ui/swift-ui';

export default function BasicToggleExample() {
  const [isOn, setIsOn] = useState(false);

  return (
    <Host matchContents>
      <Toggle isOn={isOn} onIsOnChange={setIsOn} label="启用功能" />
    </Host>
  );
}
```

### 带系统图标的切换

```tsx ToggleWithImageExample.tsx
import { useState } from 'react';
import { Host, Toggle } from '@expo/ui/swift-ui';

export default function ToggleWithImageExample() {
  const [airplaneMode, setAirplaneMode] = useState(false);

  return (
    <Host matchContents>
      <Toggle
        isOn={airplaneMode}
        onIsOnChange={setAirplaneMode}
        label="飞行模式"
        systemImage="airplane"
      />
    </Host>
  );
}
```

### 切换样式

使用 `toggleStyle` 修饰符来更改切换控件的外观。可用样式有：`automatic`、`switch` 和 `button`。

> **注意：** `button` 样式在 tvOS 上不可用。

```tsx ToggleStylesExample.tsx
import { useState } from 'react';
import { Host, Toggle, VStack } from '@expo/ui/swift-ui';
import { toggleStyle } from '@expo/ui/swift-ui/modifiers';

export default function ToggleStylesExample() {
  const [isOn, setIsOn] = useState(false);

  return (
    <Host matchContents>
      <VStack spacing={8}>
        <Toggle
          isOn={isOn}
          onIsOnChange={setIsOn}
          label="开关样式"
          modifiers={[toggleStyle('switch')]}
        />
        <Toggle
          isOn={isOn}
          onIsOnChange={setIsOn}
          label="按钮样式"
          modifiers={[toggleStyle('button')]}
        />
      </VStack>
    </Host>
  );
}
```

### 着色切换

使用 `tint` 修饰符来更改切换控件的颜色。

```tsx TintedToggleExample.tsx
import { useState } from 'react';
import { Host, Toggle } from '@expo/ui/swift-ui';
import { tint } from '@expo/ui/swift-ui/modifiers';

export default function TintedToggleExample() {
  const [isOn, setIsOn] = useState(true);

  return (
    <Host matchContents>
      <Toggle
        isOn={isOn}
        onIsOnChange={setIsOn}
        label="自定义颜色"
        modifiers={[tint('#FF9500')]}
      />
    </Host>
  );
}
```

### 自定义标签内容

你可以将自定义组件作为 `children` 传入，以创建更复杂的切换标签。使用多个 `Text` 视图，其中第一个表示标题，第二个表示副标题。

```tsx CustomLabelExample.tsx
import { useState } from 'react';
import { Host, Toggle, Text } from '@expo/ui/swift-ui';

export default function CustomLabelExample() {
  const [vibrateOnRing, setVibrateOnRing] = useState(false);

  return (
    <Host matchContents>
      <Toggle isOn={vibrateOnRing} onIsOnChange={setVibrateOnRing}>
        <Text>响铃时振动</Text>
        <Text>电话响铃时启用振动</Text>
      </Toggle>
    </Host>
  );
}
```

### 隐藏标签

使用 [`labelsHidden`](modifiers/#labelshidden) 修饰符隐藏标签，同时保留其可访问性。

```tsx HiddenLabelExample.tsx
import { useState } from 'react';
import { Host, Toggle } from '@expo/ui/swift-ui';
import { labelsHidden } from '@expo/ui/swift-ui/modifiers';

export default function HiddenLabelExample() {
  const [isOn, setIsOn] = useState(false);

  return (
    <Host matchContents>
      <Toggle
        isOn={isOn}
        onIsOnChange={setIsOn}
        label="隐藏标签"
        modifiers={[labelsHidden()]}
      />
    </Host>
  );
}
```

## API

```tsx
import { Toggle } from '@expo/ui/swift-ui';
```

<APISection packageName="expo-ui/swift-ui/toggle" apiName="Toggle" />
